--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -673,7 +673,7 @@
                 </table>
             </div>
             <div class="part5">
-                <h3>接地电阻表采样检测&nbsp;&nbsp;
+                <h3>电阻表采样检测&nbsp;&nbsp;
                     <input id="submit5_0_0" type="submit" style="height: 24px;font-size: 14px" value="隐藏选择区">
                 </h3>
                 <!--送检仪器采样区-->
@@ -1707,7 +1707,6 @@
                             <BR>
                             <p style="color: red;font-weight: 900;">
                                 温馨提示：“Part1量程1”、“Part2量程2”、“Part3量程3”、“Part4量程4”“Part5量程5”、“Part6电阻稳定性误差”6部分数据需单独提交保存！
-                            Part1-5部分内：如果有Part部分数据为空时，直接点击提交该Part表数据的按钮即可！
                             </p>
                             <!--量程1--><!--EE回路电阻菜单-->
                             <table width="48%" class="sjyqxxxg"
@@ -2830,7 +2829,7 @@
                             <td><input name="" id="jydz5" type="text"/></td>
                             <td>绝缘强度：</td>
                             <td><input name="" id="jyqd5" type="text"/></td>
-                            <td>泄露电流(A)：</td>
+                            <td>泄漏电流(A)：</td>
                             <td><input name="" id="xldl" type="text"/></td>
                         </tr>
                         <tr>
@@ -2874,7 +2873,7 @@
                             <td><input name="" id="jydz6" type="text"/></td>
                             <td>绝缘强度：</td>
                             <td><input name="" id="jyqd6" type="text"/></td>
-                            <td>泄露电流(A)：</td>
+                            <td>泄漏电流(A)：</td>
                             <td><input name="" id="xldl2" type="text"/></td>
                         </tr>
                         <tr>
