--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2364,13 +2364,13 @@
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Part6 电阻稳定性误差&nbsp;&nbsp;&nbsp;
                                             <label><input id="radio5_34" name="check5_12"
                                                           style="width: 15px;height: 15px"
-                                                          type="radio" value="1" checked="checked"/>μ&Omega;</label>
+                                                          type="radio" value="μΩ" checked="checked"/>μ&Omega;</label>
                                             <label><input id="radio5_35" name="check5_12"
                                                           style="width: 15px;height: 15px"
-                                                          type="radio" value="2"/>m&Omega;</label>
+                                                          type="radio" value="mΩ"/>m&Omega;</label>
                                             <label><input id="radio5_36" name="check5_12"
                                                           style="width: 15px;height: 15px"
-                                                          type="radio" value="3"/>&Omega;</label>
+                                                          type="radio" value="Ω"/>&Omega;</label>
                                         </form>
                                     </td>
                                 </tr>
